@@ -1,13 +1,13 @@
-// UIColorViewTest.m
+// UIColorTest.m
 //                           wookay.noh at gmail.com
 
 #import "test.h"
 
-@implementation UIColorViewTest
+@implementation UIColorTest
 
 - (void) unittest {
 
-  UIColor red = [UIColor redColor];
+  UIColor* red = [UIColor redColor];
   [assert_equal a:"red" b:red];
 
 }
