@@ -1,19 +1,21 @@
-// UIImageViewTest.m
+// UIImageTest.m
 //                           wookay.noh at gmail.com
 
 #import "test.h"
 
-@implementation UIImageViewTest
+@implementation UIImageTest
 
 - (void) unittest {
 
-  id path = @"http://img0.gmodules.com/ig/f/oKstlUEg20s/intl/ALL_kr/logo.gif";
-  NSURL *url = [NSURL URLWithString:path];
-  NSData *data = [NSData dataWithContentsOfURL:url];
+  //id path = @"http://img0.gmodules.com/ig/f/oKstlUEg20s/intl/ALL_kr/logo.gif";
+  //NSURL *url = [NSURL URLWithString:path];
+  //NSData *data = [NSData dataWithContentsOfURL:url];
+  id path = @"Icon.png";
+  NSData *data = [NSData dataWithContentsOfFile:path];
   UIImage *img = [[UIImage alloc] initWithData:data];
-  UIView* view = [UIView alloc];
-  [view setImage:img];
-  [assert_equal a:"" b:[view image]];
+  UIImageView* imageView = [UIImageView alloc];
+  [imageView setImage:img];
+  [assert_equal a:img b:[imageView image]];
 
 }
 
