@@ -2,6 +2,7 @@
 //                           wookay.noh at gmail.com
 
 #import "../unittest/UnitTest.h"
+#import <UIKit/UIKit.h>
 
 @interface UIWebViewTest : UnitTestable {} @end
 @interface UIGraphicsTest : UnitTestable {} @end
