@@ -1,0 +1,6 @@
+// test.h
+//                           wookay.noh at gmail.com
+
+#import "../unittest/UnitTest.h"
+#import "VM.h"
+@interface VMTest : UnitTestable {} @end      
