@@ -3,4 +3,5 @@ class String
     Kernel.eval self
   end
 end
-print ARGV.to_s.gsub('더하기','+').gsub('빼기','-').eval.to_s
+require "#{File.dirname __FILE__}/pol"
+Pol.new(%w{eval}).call ARGV
