@@ -1,0 +1,2 @@
+*.out
+.oo.h
