@@ -18,3 +18,4 @@ KEYWORD_ORDER="키순서"
 KEYWORD_NO="모르오"
 KEYWORD_FUNCTION="함수"
 KEYWORD_INVERSE_FUNCTION="역함수"
+KEYWORD_CODE="코드"
