@@ -4,14 +4,5 @@
 재밌는 산수
 규칙은 rules/math.rb
 
-1 더하기 1은 2
-1 더하기 1 더하기 1은 3
-2 더하기 3은 5
-3 더하기 3은 6
-3 더하기 4는 7?
-
-3은 3?
-5 빼기 2는 3?
-
-변수A는 2
-변수A는 2?
+1+1은 2
+2+6은 8?
