@@ -7,6 +7,7 @@
 1은 2
 2는 3
 함수는 x + 1?
+코드는 (x -> x + 1)(1)?
 역함수는 x - 1?
 
 1일때 2
