@@ -1,3 +1,6 @@
+2008-12-10  wookay.noh at gmail.com
+	* 코드
+
 2008-12-04  wookay.noh at gmail.com
 	* 의
 	* 와|과
